# open_deep_research_for_finna_playing_around

./: .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  BUDGET_CONFIGURATION.md  CODE_MAP.md  CONCURRENT_STATE_MANAGEMENT.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  DEBUGGING_FIXES.md  DEEPSEEK_STRUCTURED_OUTPUT_SOLUTION.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_MANAGEMENT_IMPROVEMENTS.md  DEVELOPMENT_GUIDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  MYPY_FIX_SUMMARY.md  Makefile  README.md  README_UI.md  UNIFIED_WORKFLOW_PROGRESS.md  api_server.py  blame_output.txt  check_migration.py  credit_usage.jsonl  demo_mvp.py  design_demo.md  full_log.txt  full_test_output.txt  langgraph.json  mypy.ini  mypy_errors.txt  mypy_out.txt  nicegui_app.py  prompt_for_advanced_features.md  prompt_for_deep_research.md  pyproject.toml  pytest.ini  (+10 more)
.github/workflows/: ci.yml
.mypy_cache/: missing_stubs
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _curses.data.json  _curses.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  (+260 more)
.mypy_cache/3.11/PIL/: ExifTags.data.json  ExifTags.meta.json  GifImagePlugin.data.json  GifImagePlugin.meta.json  GimpGradientFile.data.json  GimpGradientFile.meta.json  GimpPaletteFile.data.json  GimpPaletteFile.meta.json  Image.data.json  Image.meta.json  ImageChops.data.json  ImageChops.meta.json  ImageCms.data.json  ImageCms.meta.json  ImageColor.data.json  ImageColor.meta.json  ImageFile.data.json  ImageFile.meta.json  ImageFilter.data.json  ImageFilter.meta.json  ImageMath.data.json  ImageMath.meta.json  ImageMode.data.json  ImageMode.meta.json  ImageOps.data.json  ImageOps.meta.json  ImagePalette.data.json  ImagePalette.meta.json  ImageQt.data.json  ImageQt.meta.json  ImageSequence.data.json  ImageSequence.meta.json  PaletteFile.data.json  PaletteFile.meta.json  TiffImagePlugin.data.json  TiffImagePlugin.meta.json  TiffTags.data.json  TiffTags.meta.json  __init__.data.json  __init__.meta.json  (+16 more)
.mypy_cache/3.11/_pytest/: __init__.data.json  __init__.meta.json  _argcomplete.data.json  _argcomplete.meta.json  _version.data.json  _version.meta.json  cacheprovider.data.json  cacheprovider.meta.json  capture.data.json  capture.meta.json  compat.data.json  compat.meta.json  debugging.data.json  debugging.meta.json  deprecated.data.json  deprecated.meta.json  doctest.data.json  doctest.meta.json  fixtures.data.json  fixtures.meta.json  freeze_support.data.json  freeze_support.meta.json  helpconfig.data.json  helpconfig.meta.json  hookspec.data.json  hookspec.meta.json  legacypath.data.json  legacypath.meta.json  logging.data.json  logging.meta.json  main.data.json  main.meta.json  monkeypatch.data.json  monkeypatch.meta.json  nodes.data.json  nodes.meta.json  outcomes.data.json  outcomes.meta.json  pathlib.data.json  pathlib.meta.json  (+34 more)
.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json
.mypy_cache/3.11/aiohappyeyeballs/: __init__.data.json  __init__.meta.json  _staggered.data.json  _staggered.meta.json  impl.data.json  impl.meta.json  types.data.json  types.meta.json  utils.data.json  utils.meta.json
.mypy_cache/3.11/aiohttp/: __init__.data.json  __init__.meta.json  _cookie_helpers.data.json  _cookie_helpers.meta.json  abc.data.json  abc.meta.json  base_protocol.data.json  base_protocol.meta.json  client.data.json  client.meta.json  client_exceptions.data.json  client_exceptions.meta.json  client_middleware_digest_auth.data.json  client_middleware_digest_auth.meta.json  client_middlewares.data.json  client_middlewares.meta.json  client_proto.data.json  client_proto.meta.json  client_reqrep.data.json  client_reqrep.meta.json  client_ws.data.json  client_ws.meta.json  compression_utils.data.json  compression_utils.meta.json  connector.data.json  connector.meta.json  cookiejar.data.json  cookiejar.meta.json  formdata.data.json  formdata.meta.json  hdrs.data.json  hdrs.meta.json  helpers.data.json  (+59 more)
.notes/: directory_structure.md  project_overview.md  task_list.md
scripts/: check_duplicates.py
src/open_deep_research/: __init__.py  configuration.py  credit_tracker.py  dependency_manager.py  exceptions.py  feature_compatibility.py  graph.py  lazy_loader.py  message_utils.py  model_registry.py  multi_agent.py  node_adapter.py  prompt_loader.py  prompts.py  pydantic_state.py  search_dispatcher.py  state.py  tavily_tools.py  unified_models.py  unified_search_example.py  utils.py
tests/: conftest.py  run_test.py  stubs.py  test_budget_loop.py  test_compiler_citations.py  test_concurrent_sections.py  test_concurrent_state_updates.py  test_config_utils.py  test_feature_flags.py  test_graph_smoke.py  test_integration.py  test_integration_stub.py  test_keyerror_fixes.py  test_logging_utils.py  test_multi_agent_adapter.py  test_multi_agent_concurrency.py  test_parallel_research.py  test_pydantic_state.py  test_reducer_functions.py  test_report_quality.py  test_safe_context.py  test_search_smoke.py  test_settings.py  test_state_hardening.py  test_state_property.py  test_token_budget.py  test_token_logger.py  test_topic_passing.py  test_unified_planner_adapter.py  test_unified_workflow_offline.py  test_unified_workflow_smoke.py  test_utils.py
tests/evals/: evaluators.py  prompts.py  run_evaluate.py  target.py
(+7940 files in other folders)
